--- a/public/global.css
+++ b/public/global.css
@@ -65,12 +65,50 @@ button:focus {
 	border-color: #666;
 }
 
-Paper {
-	margin: 20% 40%;
-	font-weight: bold;
-	border: 2px solid #000000;
-	padding: 2%;
-	background-color: transparent;
+.row {
+	text-align: center;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	margin: auto;
+	display: flex;
+	width: 1000px;
+	font-size: 13px;
+}
 
+.column {
+	text-align: center;
+	border: 3px solid rgba(75, 192, 192, .60);
+	flex: 300px;
+	padding: 0px 5px 5px 0px;
+	margin: 0px 5px 5px 5px;
+	border-top: 2px solid #999
+}
 
+/* Calls */
+.minorTitleCalls {
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	margin: auto;
+	display: flex;
+	width: 40px;
+	font-size: 24px;
+	color: rgba(75, 192, 192, 1);
+}
+
+/* Calendar */
+.minorTitleCalendar {
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	margin: auto;
+	display: flex;
+	width: 75px;
+	font-size: 24px;
+	color: rgba(75, 192, 192, 1);
+}
+
+/* Email */
+.minorTitleEmail {
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	margin: auto;
+	display: flex;
+	width: 40px;
+	font-size: 24px;
+	color: rgba(75, 192, 192, 1);
 }
