--- a/public/global.css
+++ b/public/global.css
@@ -112,3 +112,13 @@ button:focus {
 	font-size: 24px;
 	color: rgba(75, 192, 192, 1);
 }
+
+/* Portfolio */
+.minorTitlePortfolio{
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	margin: auto;
+	display: flex;
+	width: 90px;
+	font-size: 24px;
+	color: rgba(75, 192, 192, 1);
+}
