--- a/public/global.css
+++ b/public/global.css
@@ -76,12 +76,16 @@ button:focus {
 
 .column {
 	text-align: center;
-	border: 3px solid rgba(75, 192, 192, .60);
+	border: 2px solid #018786;
 	flex: 300px;
 	padding: 0px 5px 5px 0px;
 	margin: 0px 5px 5px 5px;
-	border-top: 2px solid #999
+/*	border-top: 2px solid #6200EE */
 }
+/* Primary : #6200EE */
+/* Secondary : #03DAC6 */
+/* Primary - Variant : #03DAC6 */
+/* Secondary - Variant : #018786 */
 
 /* Calls */
 .minorTitleCalls {
@@ -90,7 +94,7 @@ button:focus {
 	display: flex;
 	width: 40px;
 	font-size: 24px;
-	color: rgba(75, 192, 192, 1);
+	color: #018786; /*Primary - Variant*/
 }
 
 /* Calendar */
@@ -100,7 +104,7 @@ button:focus {
 	display: flex;
 	width: 75px;
 	font-size: 24px;
-	color: rgba(75, 192, 192, 1);
+	color: #018786; /*Primary - Variant*/
 }
 
 /* Email */
@@ -110,7 +114,7 @@ button:focus {
 	display: flex;
 	width: 40px;
 	font-size: 24px;
-	color: rgba(75, 192, 192, 1);
+	color: #018786; /*Secondary - Variant*/
 }
 
 /* Portfolio */
@@ -120,5 +124,19 @@ button:focus {
 	display: flex;
 	width: 90px;
 	font-size: 24px;
-	color: rgba(75, 192, 192, 1);
+	color: #018786; /*Secondary - Variant*/
+}
+
+.PaperArea {
+	text-align: center;
+	color : #666666;
+	background-color: aqua;
+	height: 150px;
+	width: 150px;
+	textAlign: 'center';
+	rounded: true;
+	paddingTop: 65;
+	backgroundColor: '#76D8E3';
+	opacity: 0.8;
+	margin: auto;
 }
